poslední fungující verze - načítání calendar na frontend se základními daty, createNewTraining skrz kliknutí na calendar, fungující modální okna s informacemi, responzibilita